--- a/src/index.html
+++ b/src/index.html
@@ -340,7 +340,7 @@
               <a href="https://github.com/SealeyWang/EditorPreview">项目预览</a>
             </span>
                 </header>
-                <p>- 参与基于<a href="https://etherpad.org/">Etherpad-little</a>的 <strong>在线协同编辑</strong>开发</p>
+                <p>- 参与<strong>实时协同编辑</strong>开发，基于<a href="https://etherpad.org/">Etherpad-little</a>，使用<strong>Express</strong>，原生JS，Jquery </p>
                 <p>- 主要负责开发插件如：加粗、下划线、删除线、分隔线，浮动工具栏、行首菜单（后两个因需求变更，换了交互方式）。</p>
                 <p>- 负责插件的导出的HTML的开发，以及复杂情况下导出html的bug修复，由于是编辑器是单独项目，所以在本地配置Nginx解决跨域问题。</p>
                 <p>- 负责大部分插件的维护，部分插件的复制粘贴、交互问题、相互影响的bug的修复。  </p>
@@ -414,12 +414,12 @@
             </li>
             <li>
                 <header>
-                    <h3>华源达智能家</h3>
+                    <h3>华远达智能家</h3>
                     <span>
             </span>
                 </header>
                 <p>- 该项目是智能家居产品App，用于控制灯泡、窗帘、插座、门锁、摄像头等智能家居设备</p>
-                <p>- 参与Android原生应用开发</p>
+                <p>- 负责Android原生应用开发</p>
                 <p>- 使用GreenDao 设计SQLite表结构,包括用户、IM模块、设备、云盒等。维护数据库表结构升级</p>
                 <p>- 开发设备连接、控制模块，封装Repository,处理数据库与接口数据状态同步问题</p>
                 <p>- 基于MQTT长连接、使用观察者模式设计数据推送与实时更新模块,用于处理智能设备状态，IM消息更新问题</p>
