--- a/src/index.html
+++ b/src/index.html
@@ -559,8 +559,8 @@
     </section>
 
 </article>
-<script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>
-<script src="./main.js"></script>
+<!--<script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>-->
+<!--<script src="./main.js"></script>-->
 </body>
 
 </html>
