--- a/src/index.html
+++ b/src/index.html
@@ -294,7 +294,7 @@
         <h1>汪少立</h1>
         <!--      <img src="https://pic2.zhimg.com/v2-d206f673b1e7b8a7e3b31bc8041e05e2_xll.jpg" alt="" width="100" height="100">-->
         <p>
-            男 | 26岁 | 前端开发工程师 | 北京 | 6年工作经验
+            男 | 26岁 | 前端开发工程师 | 北京 | 5年工作经验
         </p>
         <p>
             手机：<a href="tel:18871074717">18871074717</a> | 微信：18871074717 | 邮箱：<a href="mailto:18871074717@163.com">18871074717@163.com</a>
@@ -460,7 +460,7 @@
 <!--              <a href="https://www.npmjs.com/package/node-todo-wsl-1">项目预览</a>-->
 <!--            </span>-->
 <!--                </header>-->
-<!--                <p>这是我在学习 <strong>Node.js和 单元测试</strong>制作的一个命令行小工具</p>-->
+<!--                <p>这个一个基于<strong>Node.js</strong>制作的一个命令行小工具，并且写了<strong>单元测试</strong></p>-->
 <!--            </li>-->
 <!--            <li >-->
 <!--                <header>-->
@@ -526,7 +526,7 @@
                 <header>
                     <h3>北京华远达智联科技有限公司</h3>
                     <h4>移动前端组长</h4>
-                    <span><time>2021年9月</time>~<time>2021年11月</time></span>
+                    <span><time>2016年8月</time>~<time>2020年5月</time></span>
                 </header>
                 <ul>
                     <li>负责公司 <strong>智能家居</strong>Android App</li>
@@ -559,15 +559,15 @@
                 <span>大专（非全日制）</span>
             </span>
         </p>
-        <p>
-            <span><time>2014年</time>~<time>2016年</time></span>
+<!--        <p>-->
+<!--            <span><time>2014年</time>~<time>2016年</time></span>-->
 
-            <span class="education-detail">
-                <span>北京八维研修学院</span>
-                <span>移动通信(Android开发)</span>
-                <span>无学历</span>
-            </span>
-        </p>
+<!--            <span class="education-detail">-->
+<!--                <span>北京八维研修学院</span>-->
+<!--                <span>移动通信(Android开发)</span>-->
+<!--                <span>无学历</span>-->
+<!--            </span>-->
+<!--        </p>-->
     </section>
 
 </article>
