--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,7 @@
                 <li>熟悉基于 <a href="https://etherpad.org/">Etherpad-little</a>的 <strong>实时协同编辑</strong>开发（飞书在线文档也基于此开源项目）</li>
                 <li>熟悉 <strong>Web性能优化</strong> 参与过协同编辑性能优化方案调研与实施</li>
                 <li>熟悉 <strong>Node.js Express</strong>了解koa</li>
-                <li>熟悉 <strong>Webpack 的配置和优化</strong></li>
+                <li>熟悉 <strong>Webpack 的配置和优化，了解其原理、源码</strong></li>
                 <li>熟悉 <strong>TypeScript</strong> 的使用，有多个TS项目经验</li>
                 <li>了解 前端<strong>单元测试</strong> 的使用，在自己小工具中有实践</li>
                 <li>使用过 <strong>WebSocket</strong> 解决过基于WebSocket消息的协同编辑项目线上偶现问题 </li>
