--- a/src/index.html
+++ b/src/index.html
@@ -449,41 +449,40 @@
     </section>
 
 
-<!--    <section class="openSource">-->
-<!--        <h2>开源项目</h2>-->
-<!--        <ul>-->
-<!--            <li >-->
-<!--                <header>-->
-<!--                    <h3>TODO工具</h3>-->
-<!--                    <span>-->
-<!--              <a href="https://github.com/SealeyWang/node-todo1">源码链接</a>-->
-<!--              <a href="https://www.npmjs.com/package/node-todo-wsl-1">项目预览</a>-->
-<!--            </span>-->
-<!--                </header>-->
-<!--                <p>这个一个基于<strong>Node.js</strong>制作的一个命令行小工具，并且写了<strong>单元测试</strong></p>-->
-<!--            </li>-->
-<!--            <li >-->
-<!--                <header>-->
-<!--                    <h3>海绵宝宝</h3>-->
-<!--                    <span>-->
-<!--              <a href="https://github.com/SealeyWang/SpongeBob">源码链接</a>-->
-<!--              <a href="https://sealeywang.github.io/SpongeBob/dist/index.html">项目预览</a>-->
-<!--            </span>-->
-<!--                </header>-->
-<!--                <p>这是我在学习 <strong>CSS3</strong> 时制作的一个可爱作品</p>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                <header>-->
-<!--                    <h3>简易画板</h3>-->
-<!--                    <span>-->
-<!--              <a href="https://github.com/SealeyWang/canvas-demo1">源码链接</a>-->
-<!--              <a href="https://sealeywang.github.io/canvas-demo1/">项目预览</a>-->
-<!--            </span>-->
-<!--                </header>-->
-<!--                <p>我在学习 <strong>Canvas</strong> 时做的一个小作品</p>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </section>-->
+    <section class="openSource">
+        <h2>开源作品</h2>
+        <ul>
+            <li >
+                <header>
+                    <h3>TODO工具</h3>
+                    <span>
+              <a href="https://github.com/SealeyWang/node-todo1">源码链接</a>
+            </span>
+                </header>
+                <p>这个一个基于<strong>Node.js</strong>制作的一个命令行小工具，并且写了<strong>单元测试</strong></p>
+            </li>
+            <li >
+                <header>
+                    <h3>海绵宝宝</h3>
+                    <span>
+              <a href="https://github.com/SealeyWang/SpongeBob">源码链接</a>
+              <a href="https://sealeywang.github.io/SpongeBob/dist/index.html">项目预览</a>
+            </span>
+                </header>
+                <p>这是我使用<strong>CSS3</strong>制作的一个卡通图片， 并展示制作流程</p>
+            </li>
+            <li>
+                <header>
+                    <h3>简易画板</h3>
+                    <span>
+              <a href="https://github.com/SealeyWang/canvas-demo1">源码链接</a>
+              <a href="https://sealeywang.github.io/canvas-demo1/">项目预览</a>
+            </span>
+                </header>
+                <p>这是我使用<strong>Canvas</strong>制作的手写画板，用于手写签名</p>
+            </li>
+        </ul>
+    </section>
 
     <section class="jobs">
         <h2>工作经历</h2>
@@ -559,15 +558,15 @@
                 <span>大专（非全日制）</span>
             </span>
         </p>
-<!--        <p>-->
-<!--            <span><time>2014年</time>~<time>2016年</time></span>-->
+        <p>
+            <span><time>2014年</time>~<time>2016年</time></span>
 
-<!--            <span class="education-detail">-->
-<!--                <span>北京八维研修学院</span>-->
-<!--                <span>移动通信(Android开发)</span>-->
-<!--                <span>无学历</span>-->
-<!--            </span>-->
-<!--        </p>-->
+            <span class="education-detail">
+                <span>北京八维研修学院</span>
+                <span>移动通信(Android方向)</span>
+                <span></span>
+            </span>
+        </p>
     </section>
 
 </article>
