--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
         <ol>
             <li>
                 <header>
-                    <h3><a href="https://app.hillinsight.tech/">叨叨</a>（内部办公软件）的协同编辑部分开发</h3>
+                    <h3>叨叨</a>（内部办公软件）的协同编辑部分开发</h3>
                     <span>
 <!--              <a href="#">源码私有</a>-->
               <a href="https://github.com/SealeyWang/EditorPreview">项目预览</a>
@@ -489,7 +489,7 @@
         <ol>
             <li>
                 <header>
-                    <h3>高瓴DVC </h3>
+                    <h3>北京高域海汇科技有限公司</h3>
                     <h4>前端开发工程师（外包岗）</h4>
                     <span><time>2021年12月</time>~<time>2022年5月</time></span>
                 </header>
