--- a/src/index.html
+++ b/src/index.html
@@ -510,6 +510,17 @@
                     <li>参与图片标记系统，logo生成系统的开发</li>
                 </ul>
             </li>
+
+            <li>
+                <header>
+                    <h3>北京大嘴花科技有限公司</h3>
+                    <h4>前端开发工程师</h4>
+                    <span><time>2021年6月</time>~<time>2022年5月</time></span>
+                </header>
+                <ul>
+                    <li>参与政府项目的管理后台，微信公众号的开发、维护工作，</li>
+                </ul>
+            </li>
             <li>
                 <header>
                     <h3>北京华远达智联科技有限公司</h3>
