--- a/src/index.html
+++ b/src/index.html
@@ -489,8 +489,8 @@
         <ol>
             <li>
                 <header>
-                    <h3>北京小火虫网络科技有限公司</h3>
-                    <h4>前端开发工程师</h4>
+                    <h3>北京高域海汇科技有限公司</h3>
+                    <h4>前端开发工程师（外包岗）</h4>
                     <span><time>2021年12月</time>~<time>2022年5月</time></span>
                 </header>
                 <ul>
@@ -503,14 +503,25 @@
                 <header>
                     <h3>北京计算美学科技有限公司</h3>
                     <h4>前端开发工程师</h4>
-                    <span><time>2021年8月</time>~<time>2021年11月</time></span>
+                    <span><time>2021年9月</time>~<time>2021年11月</time></span>
                 </header>
                 <ul>
                     <li>负责 <a href="https://websitebackup.nolibox.com/">官网</a>相关的开发、维护工作</li>
                     <li>参与图片标记系统，logo生成系统的开发</li>
                 </ul>
             </li>
-
+            <li>
+                <header>
+                    <h3>京东科技</h3>
+                    <h4>前端开发工程师（外包岗）</h4>
+                    <span><time>2021年6月</time>~<time>2021年8月</time></span>
+                </header>
+                <ul>
+                    <li>负责人大校友小程序管理后台二期需求开发</li>
+                    <li>参与人大小程序开发</li>
+                </ul>
+            </li>
+            <li>
             <li>
                 <header>
                     <h3>北京大嘴花科技有限公司</h3>
