--- a/src/index.html
+++ b/src/index.html
@@ -491,7 +491,7 @@
                 <header>
                     <h3>北京高域海汇科技有限公司</h3>
                     <h4>前端开发工程师（外包岗）</h4>
-                    <span><time>2021年12月</time>~<time>2022年5月</time></span>
+                    <span><time>2021年6月</time>~<time>2022年5月</time></span>
                 </header>
                 <ul>
                     <li>
@@ -499,28 +499,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
-                <header>
-                    <h3>北京计算美学科技有限公司</h3>
-                    <h4>前端开发工程师</h4>
-                    <span><time>2021年9月</time>~<time>2021年11月</time></span>
-                </header>
-                <ul>
-                    <li>负责 <a href="https://websitebackup.nolibox.com/">官网</a>相关的开发、维护工作</li>
-                    <li>参与图片标记系统，logo生成系统的开发</li>
-                </ul>
-            </li>
-            <li>
-                <header>
-                    <h3>京东科技</h3>
-                    <h4>前端开发工程师（外包岗）</h4>
-                    <span><time>2021年6月</time>~<time>2021年8月</time></span>
-                </header>
-                <ul>
-                    <li>负责人大校友小程序管理后台二期需求开发</li>
-                    <li>参与人大小程序开发</li>
-                </ul>
-            </li>
+
             <li>
             <li>
                 <header>
@@ -566,7 +545,7 @@
             <span class="education-detail">
                 <span>中国石油大学（北京）</span>
                 <span>计算机科学与技术</span>
-                <span>大专（非全日制）</span>
+                <span>大专</span>
             </span>
         </p>
         <p>
@@ -574,7 +553,7 @@
 
             <span class="education-detail">
                 <span>北京八维研修学院</span>
-                <span>移动通信(Android方向)</span>
+                <span>移动通信</span>
                 <span></span>
             </span>
         </p>
