--- a/src/index.html
+++ b/src/index.html
@@ -463,13 +463,15 @@
             </li>
             <li >
                 <header>
-                    <h3>海绵宝宝</h3>
+                    <h3>海绵记账</h3>
                     <span>
-              <a href="https://github.com/SealeyWang/SpongeBob">源码链接</a>
-              <a href="https://sealeywang.github.io/SpongeBob/dist/index.html">项目预览</a>
+              <a href="https://github.com/SealeyWang/keep-account-react">源码链接</a>
+              <a href="https://sealeywang.github.io/keep-account-website">项目预览</a>
             </span>
                 </header>
-                <p>这是我使用<strong>CSS3</strong>制作的一个卡通图片， 并展示制作流程</p>
+                <p>这是一款记账H5应用， 使用react,react router, react hooks, typescript, webpack 开发</p>
+                <p>使用style-components开发UI组件，自定义hooks管理model，封装icon组件加载svg图片。 构建shell脚本，一键部署到github pages</p>
+
             </li>
             <li>
                 <header>
