--- a/src/index.html
+++ b/src/index.html
@@ -364,13 +364,13 @@
             </li>
             <li>
                 <header>
-                    <h3>计算美学官网</h3>
+                    <h3>计算美学官网与LogoLuck产品</h3>
                     <span>
 <!--              <a href="#">源码私有</a>-->
-              <a href="https://websitebackup.nolibox.com/">项目预览</a>
+              <a href="https://logoluck.nolibox.com/home">项目预览</a>
             </span>
                 </header>
-                <p>- 该项目分为官网和内容管理系统两部分</p>
+                <p>- 官网分为和内容管理系统两部分</p>
                 <p>- 官网基于Gatsby，使用GraphQL查询接口、本地数据，使用React生成静态页面用以发布</p>
                 <p>- 内容管理系统使用strapi(一个基于Node.js的 Headless CMS)</p>
                 <p>- 主要负责还原设计图，移动端和PC端网页适配，图片、文章内容维护与接口构建。</p>
@@ -380,7 +380,11 @@
                 <p>- 通过问构建页面时请求接口，GraphQL查询数据，解决文章list 对应正确的detail</p>
                 <p>- 发布文章时通过配置的WebHooks 触发gitlab CI/CD让Docker镜像重新生成界面</p>
                 <p>- 配合运维迁移服务，多环境配置，<strong>Docker</strong>镜像构建，优化构建速度与体积</p>
-                <p>- 原来是海外项目，迁移到国内云服务后，对Gatsby支持不够友好，加上公司产品已开发出来，估计这也是后续不用这个官网的原因吧</p>
+                <p></p>
+                <p>- LogoLuck 产品使用React，Mobx,TypeScript,Material UI开发 </p>
+                <p>- 使用泛型封装Axios请求，每个请求都可以通过BaseRequest,BaseResponse的泛型参数确定请求与响应类型 </p>
+                <p>- 添加Axios拦截器统一处理Http错误，未登录时的路由限制</p>
+                <p>- 开发账号模块，手机号登录、注册、验证码，微信登录，使用mbox存储个人信息状态</p>
             </li>
             <li>
                 <header>
@@ -491,28 +495,19 @@
         <ol>
             <li>
                 <header>
-                    <h3>北京高域海汇科技有限公司</h3>
-                    <h4>前端开发工程师（外包岗）</h4>
+                    <h3>北京小火虫科技有限公司</h3>
+                    <h4>前端开发工程师</h4>
                     <span><time>2021年6月</time>~<time>2022年5月</time></span>
                 </header>
                 <ul>
                     <li>
-                        参与内部沟通软件的 <strong>协同编辑</strong> 部分的开发，处理Android、IOS客户端的网页兼容问题
+                        公司属于派遣模式，主要参与了高瓴资本内部沟通软件的 <strong>协同编辑</strong> 部分的开发，处理Android、IOS客户端的网页兼容问题
                     </li>
                 </ul>
             </li>
 
-            <li>
-            <li>
-                <header>
-                    <h3>北京大嘴花科技有限公司</h3>
-                    <h4>前端开发工程师</h4>
-                    <span><time>2020年6月</time>~<time>2021年5月</time></span>
-                </header>
-                <ul>
-                    <li>参与政府项目的管理后台，微信公众号的开发、维护工作，</li>
-                </ul>
-            </li>
+
+
             <li>
                 <header>
                     <h3>北京华远达智联科技有限公司</h3>
@@ -562,8 +557,6 @@
     </section>
 
 </article>
-<!--<script src="https://cdn.bootcss.com/echarts/4.6.0/echarts.min.js"></script>-->
-<!--<script src="./main.js"></script>-->
 </body>
 
 </html>
