--- a/src/index.html
+++ b/src/index.html
@@ -500,8 +500,9 @@
                     <span><time>2021年6月</time>~<time>2022年5月</time></span>
                 </header>
                 <ul>
+                    <li>派遣<strong>京东</strong>负责人大校友小程序管理后台的开发</li>
                     <li>
-                        公司属于派遣模式，主要参与了高瓴资本内部沟通软件的 <strong>协同编辑</strong> 部分的开发，处理Android、IOS客户端的网页兼容问题
+                        派遣<strong>高瓴</strong>参与内部沟通软件的 <strong>协同编辑</strong> 部分的开发，处理Android、IOS客户端的网页兼容问题
                     </li>
                 </ul>
             </li>
